syntax = "proto3";

package com.cognite.beam.proto;

import "google/protobuf/wrappers.proto";
import "google/protobuf/struct.proto";

option java_package = "com.cognite.client.dto";
option java_multiple_files = true;
option java_outer_classname = "PnIDResponseOuter";

message BoundingBox {
    double xMax = 1;
    double xMin = 2;
    double yMax = 3;
    double yMin = 4;
}

message Annotation {
     BoundingBox boundingBox = 1;
     google.protobuf.StringValue text = 2;
     repeated google.protobuf.Struct entities = 3;
     google.protobuf.DoubleValue confidence = 4;
     google.protobuf.StringValue type = 5;
}

message PnIDResponse {
    /*
     The id of the source file used for detecting annotations and building
     interactive P&ID
     */
    google.protobuf.Int64Value file_id = 1;

    /*
    The external id of the source file used for detecting annotations and building
    interactive P&ID
    */
    google.protobuf.StringValue file_external_id = 2;

    // The identified entity annotations with bounding boxes
    repeated Annotation items = 3;

    // The converted SVG binary
    google.protobuf.BytesValue svg_binary = 4;

    // The converted PNG binary
    google.protobuf.BytesValue png_binary = 5;
}

message ConvertResponse {
  /*
     The id of the source file used for building
     interactive P&ID
     */
  google.protobuf.Int64Value file_id = 1;

  /*
  The external id of the source file used for building
  interactive P&ID
  */
  google.protobuf.StringValue file_external_id = 2;

  // The URL for the converted SVG file
  google.protobuf.StringValue svg_url = 4;

  // The URL for the converted PNG file
  google.protobuf.StringValue png_url = 5;
}